Compile Owl as native executable and replace client/server-architecture for testing by native executable. Closes #215.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,10 +24,12 @@ Build:
   script:
     - apt-get update && apt-get install -y --no-install-recommends build-essential zlib1g-dev # TODO: Remove this after Docker update
     - ./gradlew distZip
+    - build/native-executable/owl-native --version
   artifacts:
     paths:
-      - build/clibrary/reports
       - build/distributions
+      - build/native-executable/reports
+      - build/native-library/reports
       - build/reports
     when: on_success
     expire_in: 1 week
